--- a/profile.css
+++ b/profile.css
@@ -13,7 +13,7 @@ main {
   width: 300px;
   height: 300px;
   border-radius: 50%;
-  background-image: url('/img/unnamed.jpg');
+  background-image: url('https://static.vecteezy.com/system/resources/previews/004/274/186/original/person-icon-user-interface-icon-silhouette-of-man-simple-symbol-a-glyph-symbol-in-your-web-site-design-logo-app-ui-webinar-video-chat-ect-vector.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -49,7 +49,7 @@ main {
   height: 40px;
   border-radius: 1px;
   margin: 10px;
-  background-image: url('/img/velog.jpeg');
+  background-image: url('https://pbs.twimg.com/profile_images/1228368893321736193/Ov0og7E8_400x400.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -60,7 +60,7 @@ main {
   height: 40px;
   border-radius: 50%;
   margin: 10px;
-  background-image: url('/img/github.png');
+  background-image: url('https://cdn-icons-png.flaticon.com/512/25/25231.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
