--- a/profile/profile.css
+++ b/profile/profile.css
@@ -1,3 +1,30 @@
+header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 10px 0;
+  background-color: #0dcaf030;
+}
+
+header * {
+  margin: 0 10px;
+}
+
+header a {
+  color: black;
+  text-decoration: none;
+}
+
+header div {
+  font-size: 1.7rem;
+  color: #0dacf0;
+  text-shadow: 1.5px 1.5px #9f9f9f
+}
+
 main {
   height: 100vh;
   display: flex;
@@ -13,14 +40,35 @@ main {
   width: 300px;
   height: 300px;
   border-radius: 50%;
-  background-image: url('https://static.vecteezy.com/system/resources/previews/004/274/186/original/person-icon-user-interface-icon-silhouette-of-man-simple-symbol-a-glyph-symbol-in-your-web-site-design-logo-app-ui-webinar-video-chat-ect-vector.jpg');
+  overflow: hidden;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  position: relative;
+  animation: rolling 3s;
+}
+
+@keyframes rolling {
+  0% {
+    transform: translateX(-100px) rotate(-20deg)
+  }
+
+  100% {
+    transform: translateX(0) rotate(0deg)
+  }
+}
+
+#img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: cover;
 }
 
 .parent2 {
-  margin-left: 30px;
+  margin-left: 50px;
 }
 
 .info {
@@ -35,7 +83,44 @@ main {
 #tag-name,
 #strength,
 #word {
-  margin: 10px;
+  margin: 10px 0;
+}
+
+#tag-name {
+  width: 100%;
+  text-align: center;
+  font-size: 2.8rem;
+  border-bottom: 1px solid gray;
+  padding: 5px 0;
+}
+
+#strength {
+  border-right: 1.5px solid black;
+  white-space: nowrap;
+  overflow: hidden;
+  animation-name: typing, blinking;
+  animation-delay: 0s, 2.7s;
+  animation-duration: 2.5s, 1s;
+  animation-iteration-count: 1, infinite;
+  animation-timing-function: steps(27), steps(2);
+}
+
+@keyframes typing {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+@keyframes blinking {
+  0% {
+    border-right: 1.5px solid transparent;
+  }
+  100% {
+    border-right: 1.5px solid black;
+  }
 }
 
 #word {
@@ -43,8 +128,6 @@ main {
 }
 
 .link-img {
-  margin: 15px;
-  margin-left: 20px;
   display: flex;
 }
 
