--- a/main.css
+++ b/main.css
@@ -4,13 +4,13 @@
     justify-content: center;
 }
 
-#total > div {
+#total>div {
     width: 500px;
     height: auto;
     display: inline-block;
 }
 
-.container > div {
+.container>div {
     display: inline-flex;
 }
 
@@ -24,21 +24,26 @@
 }
 
 .content {
-    padding: 0px 5% 0px 5%;
+    padding: 0px 10% 0px 10%;
 }
 
 .introCommnet {
     color: gray;
 }
+
 .coLi {
     color: gray;
     list-style-type: none;
+    margin-bottom: 40px;
 }
 
+/* 정렬 필요 */
+ul { margin: 0 auto; display: table;}
+ul li{ margin: 4px 0;}
 
 .title {
     font-weight: 700;
-    font-size: 37px;
+    font-size: 50px;
     color: #00bbff;
     align-items: center;
 }
@@ -60,7 +65,7 @@
     height: 300px;
     border-radius: 50%;
     margin: 30px auto;
-    
+
     object-fit: cover;
     display: flex;
     justify-content: center;
@@ -74,11 +79,14 @@
     padding: 0;
     box-shadow: 5px 5px 10px;
     cursor: pointer;
-  }
+}
 
-  #commitPointer {
-    width: 20px;
-    height: 20px;
-    object-fit: cover;
-    padding: 0;
-  }
+.commentArea {
+    padding: 5px;
+    background-color: rgb(241, 250, 252);
+    border-radius: 10px;
+}
+
+#commitBtn {
+    padding: 5px auto;
+}
