--- a/global.css
+++ b/global.css
@@ -17,3 +17,35 @@ p {
 ul {
   padding: 0 !important;
 }
+
+header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 15px 0;
+  border-bottom: 1px solid lightgray;
+}
+
+/* header */
+header * {
+  margin: 0 10px;
+}
+
+header a {
+  color: black;
+  text-decoration: none;
+  font-size: 1.2rem;
+}
+
+header a:hover {
+  color: #0a58ca;
+}
+
+header div {
+  font-size: 1.7rem;
+  color: #00bbff;
+}
