--- a/global.css
+++ b/global.css
@@ -18,6 +18,24 @@ ul {
   padding: 0 !important;
 }
 
+/* scrollbar */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #aaa;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #888;
+}
+
+/* header */
 header {
   width: 100%;
   display: flex;
@@ -30,7 +48,6 @@ header {
   border-bottom: 1px solid lightgray;
 }
 
-/* header */
 header * {
   margin: 0 10px;
 }
